<resources>
    <string name="app_name">联羿资产清查</string>

    <string name="network_error">当前无网络，请检查你的网络设置</string>
    <string name="notify_no_network">网络连接不可用，请稍后重试！</string>
    <string name="esky_service_exception">网络不给力，请稍候重试！</string>
    <string name="time_out_please_try_again_later">连接超时,请稍后再试</string>
    <string name="str_room_count">总数量:%s</string>
    <string name="str_room_amount">总金额:%s元</string>
    <string name="str_profit_count">盘盈数量:%s</string>
    <string name="str_profit_amount">盘盈金额:%s元</string>
    <string name="str_deficit_count">盘亏数量:%s</string>
    <string name="str_deficit_amount">盘亏金额:%s元</string>
    <string name="str_total_of">总数量:%1s \n总金额:%2s元</string>
    <string name="str_save">保存</string>
    <string name="str_label_print">标签打印</string>
    <string name="str_add_goods">选择\n物品</string>
    <string name="str_new_goods">新增\n物品</string>
    <string name="str_unit_price">单价:%s元</string>
    <string name="str_location">存放位置:%s</string>
    <string name="str_depository">保管人:%s</string>
    <string name="str_goods_details">%1s|%2s|%3s</string>
    <string name="str_create_cabinet">请输入柜子名称</string>
    <string name="str_goods_serial_number">物品编号</string>
    <string name="str_goods_name">物品名称</string>
    <string name="str_goods_specifications">规格型号</string>
    <string name="str_goods_unit">单位</string>
    <string name="str_hint_goods_number">请输入物品数量</string>
    <string name="str_hint_goods_barcode">请输入RFID识别码</string>
    <string name="str_hint_goods_unit_price">请输入单价</string>
    <string name="str_hint_goods_depository">请输入保管人</string>
    <string name="str_hint_goods_exp">请输入质保期</string>
    <string name="str_hint_goods_mfg">请输入使用年限</string>
    <string name="str_hint_goods_brand">请输入品牌</string>
    <string name="str_hint_goods_supplier">请输入供应商</string>
    <string name="str_hint_goods_contact">请输入联系人</string>
    <string name="str_hint_goods_contact_phone">请输入联系电话</string>
    <string name="str_hint_goods_name">请输入物品名称</string>
    <string name="str_hint_goods_serial_number">请输入物品编号</string>
    <string name="str_hint_goods_specifications">请输入物品规格</string>
    <string name="str_hint_goods_unit">请输入单位</string>
    <string name="str_unit_price_and_number">单价:%1s元&#160;&#160;&#160;&#160;&#160;&#160;数量:%2s</string>
    <string name="str_continue">保存并继续</string>
    <string name="str_qr_code">编号:%s</string>
    <string name="str_qr_time">购入日期:%s</string>
    <string name="str_qr_name">名称:%s</string>
    <string name="str_qr_space">规格:%s</string>
    <string name="str_qr_subject">科目:%s</string>
    <string name="str_qr_building">房间:%s</string>
    <string name="str_rfid">RFID识别码:%s</string>
    <string name="str_scan">扫一扫</string>
    <string name="str_room_amount_unit">总金额(元):%s</string>
    <string name="str_profit_amount_unit">盘盈金额(元):%s</string>
    <string name="str_deficit_amount_unit">盘亏金额(元):%s</string>
</resources>